kronicle/expected-test-output/kronicle/templates/namespace.yaml
---
# Source: kronicle/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kronicle
