kronicle/expected-test-output/kronicle/templates/service.yaml
---
# Source: kronicle/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kronicle-service
spec:
  selector:
    app: kronicle-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8090
    - protocol: TCP
      port: 81
      targetPort: 8091
---
# Source: kronicle/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kronicle-app
spec:
  selector:
    app: kronicle-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
